Actually, it does work beyond level 2. The problem is that it starts off folded

--- a/templates/experimental/elodieb.html
+++ b/templates/experimental/elodieb.html
@@ -50,7 +50,7 @@
       {{range .Trace }}
       {{ if ne .Level $currentLevel }}
       {{ if gt .Level $currentLevel }}
-      <dd class="active"><div class="accordion-nested"><dl>
+      <dd><div class="accordion-nested"><dl>
       {{ else }}
       </dl></div></dd>
       {{ end }}
