Crude Diagnostics to print out viewed and compared So far, only for commodities and industries

--- a/templates/experimental/about.html
+++ b/templates/experimental/about.html
@@ -4,7 +4,7 @@
 
 <h2>About Page</h2><br>
 
-<p>there isn't much to say about this very basic site</p>
+<p>there isn't much to say about this. It's not needed any more</p>
 
 <br><br>
 {{if .}}
