--- a/templates/components/menu.html
+++ b/templates/components/menu.html
@@ -13,7 +13,7 @@
         <a class=" w3-button  w3-bar-item" href="/user/dashboard">Dashboard</a>
         <a class=" w3-button  w3-bar-item" href="/welcome">Home</a>
         <a class=" w3-button  w3-bar-item" href="/user/data">Base Data</a>
-        <a class=" w3-button  w3-bar-item" href="/user/table-data">Display Data</a>
+        <a class=" w3-button  w3-bar-item" href="/all-display-data">Display Data</a>
         <a class=" w3-button  w3-bar-item" href="/admin/dashboard">Admin</a>
         <a class=" w3-button  w3-bar-item" href="/trace">Trace</a>
 
