Labelled Forward and Back Arrows

--- a/templates/components/menu.html
+++ b/templates/components/menu.html
@@ -71,7 +71,7 @@
         {{ end }}
       </div>
     </div>
-    <a class=" w3-button  " href="/user/back"><i class="fas fa-arrow-left"></i> </a>
+    <a class=" w3-button  " href="/user/back"><i class="fas fa-arrow-left"></i> </a> {{ .ComparatorState }} {{ .ViewedState }}
     <a class=" w3-button  " href="/user/forward"><i class="fas fa-arrow-right"></i></a>
     <a class=" w3-button w3-xlarge" href="https://axfreeman.github.io/just-the-docs-template/"><i
         class="fa fa-question"></i> </a>
