Small restructure of Templates folder; switched some diagnostics back on

--- a/templates/table-components/commodity-table.html
+++ b/templates/table-components/commodity-table.html
@@ -34,7 +34,7 @@
         {{ Show . "TurnoverTime" }}
         {{ Show . "Demand" }}
         {{ Show . "Supply" }}
-        {{ Show . "AllocationRatio" }}
+        {{ ShowDecimal . "AllocationRatio" }}
 
 
       </tr>
