Successfully displaying an individual industry stock, without detail as yet

--- a/templates/table-components/class-table-full.html
+++ b/templates/table-components/class-table-full.html
@@ -23,7 +23,7 @@
       {{range .ClassViews }}
 
       <tr>
-        {{ Link . `class`}}
+        {{ Link . `class` `Name`}}
         {{ Show .ConsumptionView "Size" }}
         {{ Show .ConsumptionView "Value" }}
         {{ Show .ConsumptionView "Price" }}
