--- a/templates/table-components/class-table-sizes.html
+++ b/templates/table-components/class-table-sizes.html
@@ -16,7 +16,7 @@
     <tbody>
       {{range .ClassViews }}
       <tr>
-        {{ Link . `class`}}
+        {{ Link . `class` `Name`}}
         {{ Show . `Population`}}
         {{ Show .ConsumptionView "Size" }}
         {{ Show .MoneyView "Size" }}
