--- a/templates/table-components/class-table-values.html
+++ b/templates/table-components/class-table-values.html
@@ -15,7 +15,7 @@
     <tbody>
       {{range .ClassViews }}
       <tr>
-        {{ Link . `class`}}
+        {{ Link . `class` `Name`}}
         {{ Show . "Population "}}
         {{ Show .ConsumptionView "Value" }}
         {{ Show .MoneyView "Value" }}
