--- a/templates/table-components/industry-table-full.html
+++ b/templates/table-components/industry-table-full.html
@@ -21,7 +21,7 @@
       {{range .IndustryViews }}
 
       <tr>
-        {{ Link . `industry`}}
+        {{ Link . `industry` `Name`}}
         {{ IndustryCommodityLink . }}
         {{ Show . "OutputScale"}}
         {{ Show . "OutputGrowthRate"}}
