--- a/templates/tables/class_stocks.html
+++ b/templates/tables/class_stocks.html
@@ -22,7 +22,7 @@
         {{ range .ClassStockViews }}
         <tr>
           {{ ShowString . `UsageType` }}
-          {{ StockClassLink . }}
+          {{ StockClassLink . `Name` }}
           {{ ClassStockCommodityLink .}}
           {{ Show . `Size` }}
           {{ Show . `Value` }}
