Diagnostics for bug in Show Variable Capital

--- a/templates/tables/industry_stock.html
+++ b/templates/tables/industry_stock.html
@@ -14,6 +14,10 @@
     </thead>
     <tbody>
       <tr>
+        <td> Time Stamp</td>
+        <td style="text-align:center">{{ .IndustryStock.TimeStamp }}</td>
+      </tr>
+      <tr>
         <td> Industry </td>
         <td style="text-align:center">{{ .IndustryStock.IndustryName }}</td>
       </tr>
