Added Menu item to choose display dimension

--- a/templates/table-components/class-table-prices.html
+++ b/templates/table-components/class-table-prices.html
@@ -7,8 +7,8 @@
     <thead>
       <tr>
         <th style="width:15%">Class</th>
-        <th style="text-align:center; width:15%"><i style="font-weight: bolder; color:green" class="fa fa-cutlery"></th>
-        <th style="text-align:center; width:15%"><i class="fa fa-dollar" style="font-weight: 900; color:goldenrod"></th>
+        <th style="text-align:center; width:15%"><i style="font-weight: bolder; color:green" class="fa fa-cutlery"></i></th>
+        <th style="text-align:center; width:15%"><i class="fa fa-dollar" style="font-weight: 900; color:goldenrod"></i></th>
         <th style="text-align:center; width:15%">Sales</th>
       </tr>
     </thead>
