--- a/templates/table-components/class-table-prices.html
+++ b/templates/table-components/class-table-prices.html
@@ -6,16 +6,18 @@
   <table >
     <thead>
       <tr>
-        <th style="width:15%">Class</th>
-        <th style="text-align:center; width:15%"><i style="font-weight: bolder; color:green" class="fa fa-cutlery"></i></th>
-        <th style="text-align:center; width:15%"><i class="fa fa-dollar" style="font-weight: 900; color:goldenrod"></i></th>
-        <th style="text-align:center; width:15%">Sales</th>
+        <th style="width:30%">Class</th>
+        <th style="width:20%">Population</th>
+        <th style="text-align:center; width:20%"><i style="font-weight: bolder; color:green" class="fa fa-cutlery"></i></th>
+        <th style="text-align:center; width:20%"><i class="fa fa-dollar" style="font-weight: 900; color:goldenrod"></i></th>
+        <th style="text-align:center; width:20%">Sales</th>
       </tr>
     </thead>
     <tbody>
       {{range .ClassViews }}
       <tr>
         {{ Link . `class` `Name`}}
+        {{ Show . `Population` }}
         {{ Show .ConsumptionView "Price" }}
         {{ Show .MoneyView "Price" }}
         {{ Show .SalesView "Price" }}
