--- a/templates/table-components/industry-table-prices.html
+++ b/templates/table-components/industry-table-prices.html
@@ -6,15 +6,15 @@
   <table>
     <thead>
       <tr>
-        <th style="width:20%">Industry</th>
-        <th style="text-align:center; width:10%">C</th>
-        <th style="text-align:center;width:10%">V</th>
-        <th style="text-align:center;width:10%">M</th>
-        <th style="text-align:center;width:10%">C'</th>
-        <th style="text-align:center;width:10%">Initial Capital</th>
-        <th style="text-align:center;width:10%">Current Capital</th>
-        <th style="text-align:center;width:10%">Profit</th>
-        <th style="text-align:center;width:10%">Profit Rate</th>
+        <th>Industry</th>
+        <th style="text-align:center">C</th>
+        <th style="text-align:center">V</th>
+        <th style="text-align:center">M</th>
+        <th style="text-align:center">C'</th>
+        <th style="text-align:center">Initial Capital</th>
+        <th style="text-align:center">Current Capital</th>
+        <th style="text-align:center">Profit</th>
+        <th style="text-align:center">Profit Rate</th>
       </tr>
     </thead>
     <tbody>
