Display Profit Rate properly (as Decimal)

--- a/templates/table-components/industry-table-full.html
+++ b/templates/table-components/industry-table-full.html
@@ -29,7 +29,7 @@
         {{ Show . "WorkInProgress"}}
         {{ Show . "CurrentCapital"}}
         {{ Show . "Profit"}}
-        {{ Show . "ProfitRate"}}
+        {{ ShowDecimal . "ProfitRate"}}
       </tr>
       {{end}}
     </tbody>
