--- a/templates/table-components/industry-table-prices.html
+++ b/templates/table-components/industry-table-prices.html
@@ -29,7 +29,7 @@
         {{ Show . "InitialCapital" }}
         {{ Show . "CurrentCapital" }}
         {{ Show . "Profit" }}
-        {{ Show . "ProfitRate" }}
+        {{ ShowDecimal . "ProfitRate" }}
       </tr>
       {{end}}
     </tbody>
